--- a/CHANGELOG
+++ b/CHANGELOG
@@ -32,10 +32,16 @@ FIXED: Blinking/flashing text on uploading notification
 
 1.01
 ----------
-ADDED: Save format 
+ADDED: Save format
 REMOVED: Dependency for 'scrot'
 
 1.1
 ----------
 FIXED: Updated to new Imgur API
 ADDED: Renamed to MagickShot
+
+2.0
+---------
+ADDED: Code cleaned up a lot
+FIXED: All modes now work
+FIXED: Copying to clipboard works as expected for gnome
